starting the journey

--- a/C_SGD_Stochastic_Gradient_Descent.ipynb
+++ b/C_SGD_Stochastic_Gradient_Descent.ipynb
@@ -11,6 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How it works?\n",
+    "\n",
+    "- SGDC is a linear model\n",
+    "\n",
+    "\n",
+    "- Image classification:\n",
+    "    - It assigns a weight per class to each pixel\n",
+    "    - When it sees a new image it just sums ip the weighted pixel intensities to get a score for each class.\n",
+    "        - Since 3s and 5s differ only by a few pixels, this model easily confuse them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Advantages\n",
     "- Capable of handling very large datasets efficiently\n",
     "- Trains instances idependently\n",
@@ -23,7 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn\n",
     "from sklearn.linear_model import SGDClassifier"
    ]
   },
