--- a/Support_Vector_Machines/Support_Vector_Machine_intro.ipynb
+++ b/Support_Vector_Machines/Support_Vector_Machine_intro.ipynb
@@ -4,7 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Support Vector Machine Classifier"
+    "# Support Vector Machine Intro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM is powerful and versatile ML model, capable of:\n",
+    "- Linear classification\n",
+    "- Non-linear classification\n",
+    "- Regression\n",
+    "- Outlier detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔥 Unlike Logistic Regression, SVMs **do not** output probabilities for each class."
    ]
   },
   {
@@ -14,6 +32,15 @@
     "Native `Binary` classifier\n",
     "\n",
     "When used for `Multiclass` classification, it uses OvO (one-versus-one) strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Advantages:\n",
+    "\n",
+    "- Particularly well suited for classification of complex small- or medium-sized datasets"
    ]
   },
   {
