--- a/Support_Vector_Machines/C_Linear_SVM.ipynb
+++ b/Support_Vector_Machines/C_Linear_SVM.ipynb
@@ -84,8 +84,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ------------ Alternative #1 ----------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This is the `fastest` of the three alternatives\n",
+    "- Especially if training set is very large, or has plenty of features\n",
+    "- Should be tried first"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,11 +110,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardise features\n",
+    "# Do not forget `loss=hinge`\n",
+    "# dual=False when n_samples > n_features \n",
+    "\n",
+    "lin_svc = LinearSVC( C=1, loss='hinge', dual=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ------------ Alternative #2 ----------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This algorithm is perfect for complex small or medium-sized training sets\n",
+    "- Scales well with the number of features, especially with sparse features (ie. each instance has foew nonzero features)\n",
+    "- 🔥 Is the only SVM that **`supports the kernel trick`** (ie. the kernel simulates similarity or polynomial features w/o need to create them)\n",
+    "- Use this for **`Non-linear`** datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lin_svc = LinearSVC(C=1, loss='hinge')"
+    "lin_svm = SVC(kernel='linear', C=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ------------ Alternative #3 ----------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This applies Stochastic Gradient Descent to train a linearSVM Classifier\n",
+    "# Very useful for online learning\n",
+    "\n",
+    "m=1 # m = Number of instances (has to be adapted)\n",
+    "C=1 # C has to be adapted \n",
+    "lin_sgd = SGDClassifier(loss='hinge', alpha=1/(m*C))"
    ]
   },
   {
