--- a/Bias_Variance_Trade_off.ipynb
+++ b/Bias_Variance_Trade_off.ipynb
@@ -42,7 +42,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#one example"
+   ]
   }
  ],
  "metadata": {
